[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/SoundManager.gd" type="Script" id=1]

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="ComboSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

